build: replace simple deprecated API usage